# ledge-rs

./: .gitignore  Cargo.toml  devenv.nix  ledger-schema.xml
client/: Cargo.toml
client/src/: main.rs
engine/: Cargo.toml
engine/src/: main.rs
ledger_messages/: Cargo.toml
ledger_messages/src/: command_response_codec.rs  decimal_codec.rs  lib.rs  post_transaction_codec.rs  response_code.rs  var_string_encoding_codec.rs
migrations/: 20251115080915_create-events-table.sql
sbe-codec/: Cargo.toml
script/: gen-sbe.sh
