# [package]
# name = "ledge-rs"
# version = "0.1.0"
# edition = "2024"

# [dependencies]
# axum = "0.8.7"
# config = "0.15.19"
# dotenvy = "0.15.7"
# serde = { version = "1.0.228", features = ["derive"] }
# serde_json = "1.0.145"
# sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
# tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
# uuid = { version = "1.18.1", features = ["serde", "v7"] }

[workspace]
resolver = "3"
members = [
    # bin
    "engine",
    "client",

    # lib 
    "sbe-codec",
]
